# cpp-mathlib

./: .gitignore  CMakeLists.txt  README.md  main.cpp  math_program
cmake/: mathlibConfig.cmake.in
include/mathlib/: Arithmetic.h  Matrix.h  Vector.h
